--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ p{
     font-size: 1.5rem;
 }
 html{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Times New Roman', Times, serif;
 }
 li{
     list-style: none;
